Fix text overflow in note view mode

--- a/src/Style/Note.css
+++ b/src/Style/Note.css
@@ -1,5 +1,4 @@
-.Note 
-{
+.Note {
     width: 300px;
     height: 400px;
     margin: 15px;
@@ -16,6 +15,8 @@
 textarea {
     border: none;
     resize: none;
+    overflow: hidden;
+    text-overflow: ellipsis;
     font-family: inherit;
     font-size: inherit;
     background-color: aliceblue;
@@ -41,7 +42,7 @@ textarea:placeholder-shown {
 
 .Note .NoteHeader {
     height: 30px;
-    background-color: rgba(107,170,244,1);
+    background-color: rgba(107, 170, 244, 1);
     text-align: left;
     padding: 15px;
     display: flex;
@@ -54,7 +55,7 @@ textarea:placeholder-shown {
 }
 
 .Note .NoteHeader textarea {
-    background-color: rgba(107,170,244,1);
+    background-color: rgba(107, 170, 244, 1);
     font-size: 18.72px;
 }
 
@@ -100,6 +101,13 @@ textarea:placeholder-shown {
 .Note .NoteBody {
     margin: 0 16px;
     text-align: justify;
+}
+
+.Note .NoteBody p {
+    max-width: 300px;
+    height: fit-content;
+    text-overflow: ellipsis;
+    word-wrap: break-word;
 }
 
 .Note .NoteBody textarea {
